POWR-889 Fix WSOD when viewing non-existing term

--- a/composer.json
+++ b/composer.json
@@ -153,7 +153,8 @@
                 "2953331 - Add a views sort handler for sorting content by moderation state": "https://www.drupal.org/files/issues/2018-07-09/2953331-6.patch"
             },
             "drupal/ctools": {
-                "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch"
+                "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch",
+                "2785499 Entity Bundle Condition Plugin does not work in all situations": "https://www.drupal.org/files/issues/2019-03-01/ctools_fix_condition_plugin_entity_bundle-2785499-12.patch"
             },
             "drupal/content_lock": {
                 "2919019 - content_lock_entity_operation doesn't work if the entity list is cached": "https://www.drupal.org/files/issues/content_lock-caching-invalidation-2919019-3.patch"
