POWR-889 Revert CI cache key change

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ defaults: &defaults
 restore_cache: &restore_cache
   # We use the composer.lock as a way to determine if we can cache our build.
   keys:
-  - v1-dependencies-{{ checksum "composer.lock" }}-20190417
+  - v1-dependencies-{{ checksum "composer.lock" }}
   # fallback to using the latest cache if no exact match is found
   # - v1-dependencies-
 
@@ -26,7 +26,7 @@ save_cache: &save_cache
     - ./web/profiles/contrib
     - ./web/themes/contrib
     - ./web/libraries
-  key: v1-dependencies-{{ checksum "composer.lock" }}-20190417
+  key: v1-dependencies-{{ checksum "composer.lock" }}
 
 #Jobs
 
