POWR-833 patch to make Groupmedia module verbiage consistent with updates to Group/gnode

--- a/composer.json
+++ b/composer.json
@@ -167,6 +167,9 @@
                 "2842630 - Empty page when trying to create group node": "https://www.drupal.org/files/issues/2018-09-13/2842630-15.patch",
                 "POWR-833 - Patch Group module to remove term node and make verbiage more user friendly": "patches/powr-833.patch"
             },
+            "drupal/groupmedia": {
+                "POWR-833 - Patch Groupmedia module to make the verbiage consistent with Group/gnode": "patches/powr-833-groupmedia.patch"
+            },
             "drupal/clamav": {
                 "2915237 - allowUncheckedFiles() not working as expected": "https://www.drupal.org/files/issues/2915237-2.patch"
             },
