--- a/web/sites/default/config/config_split.config_split.config_multidev.yml
+++ b/web/sites/default/config/config_split.config_split.config_multidev.yml
@@ -3,12 +3,13 @@ langcode: en
 status: true
 dependencies: {  }
 id: config_multidev
-label: 'MultiDev and Local'
-description: 'Config for Multi-Dev and Local environment'
+label: MultiDev
+description: 'Config for Multi-Dev environment'
 folder: sites/default/config_multidev
 module:
   devel: 0
   kint: 0
+  clamav: 0
 theme: {  }
 blacklist: {  }
 graylist: {  }
