--- a/web/sites/default/config/config_split.config_split.config_prod.yml
+++ b/web/sites/default/config/config_split.config_split.config_prod.yml
@@ -6,7 +6,8 @@ id: config_prod
 label: 'Production Modules'
 description: 'Modules that should only be enabled in production (and not in preproduction environments).'
 folder: sites/default/config_prod
-module: {  }
+module:
+  clamav: 0
 theme: {  }
 blacklist:
   - key.key.solr_core
