--- a/web/sites/default/config/config_split.config_split.config_test.yml
+++ b/web/sites/default/config/config_split.config_split.config_test.yml
@@ -6,7 +6,8 @@ id: config_test
 label: Test
 description: 'Config for the Test environment'
 folder: sites/default/config_test
-module: {  }
+module:
+  clamav: 0
 theme: {  }
 blacklist: {  }
 graylist: {  }
