--- a/web/sites/default/config_dev/clamav.settings.yml
+++ b/web/sites/default/config_dev/clamav.settings.yml
@@ -1,14 +1,14 @@
-enabled: 1
+enabled: true
 outage_action: 0
 overridden_schemes: {  }
-scan_mode: '0'
+scan_mode: 0
 verbosity: 0
 mode_executable:
   executable_path: /usr/bin/clamscan
   executable_parameters: ''
 mode_daemon_tcpip:
   hostname: localhost
-  port: '3310'
+  port: 3310
 mode_daemon_unixsocket:
   unixsocket: /var/clamav/clamd
 _core:
