--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,6 @@
         "drupal/webform": "^5.1",
         "drush/drush": "^9.5.0",
         "roave/security-advisories": "dev-master",
-        "symfony/http-foundation": "3.4.23",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4"
@@ -145,7 +144,7 @@
         "enable-patching": true,
         "patches": {
             "drupal/core": {
-                "Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch",
+                "2567035 - Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch",
                 "1349080 - node_access filters out accessible nodes when node is left joined.": "https://www.drupal.org/files/issues/1349080-397-D8.patch",
                 "2797583 - Dynamically provide action plugins for every moderation state change": "https://www.drupal.org/files/issues/publish_unpublish-2797583-62.patch",
                 "2885278 - Node local tasks tabs do not appear on node revisions": "https://www.drupal.org/files/issues/2018-04-19/node-revisions-missing-local-tasks-2885278-11.patch",
@@ -153,7 +152,7 @@
                 "2953331 - Add a views sort handler for sorting content by moderation state": "https://www.drupal.org/files/issues/2018-07-09/2953331-6.patch"
             },
             "drupal/ctools": {
-                "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch",
+                "2475595 - Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch",
                 "2785499 Entity Bundle Condition Plugin does not work in all situations": "https://www.drupal.org/files/issues/2019-03-01/ctools_fix_condition_plugin_entity_bundle-2785499-12.patch"
             },
             "drupal/content_lock": {
