--- a/web/sites/default/config/media.type.image.yml
+++ b/web/sites/default/config/media.type.image.yml
@@ -11,7 +11,7 @@ _core:
   default_config_hash: UbLy1_yBV5jSxil0-k8gV9GiVUg3Oik3hlAJzqeT8YQ
 id: image
 label: Image
-description: 'Locally hosted images.'
+description: 'Images added to the site have a focal point set to allow the system to crop the image for use in banners and features.'
 source: image
 queue_thumbnail_downloads: false
 new_revision: false
