POWR-958 Update lando command

--- a/.lando.yml
+++ b/.lando.yml
@@ -88,7 +88,7 @@ tooling:
     service: appserver
     description: "Run behat tests"
     cmd:
-      - /app/vendor/bin/behat
+      - /app/vendor/bin/behat -c /app/tests/behat.yml
   chromedriver:
     service: chromedriver
     description: "Run chromedriver commands."
