--- a/composer.json
+++ b/composer.json
@@ -164,11 +164,7 @@
             "drupal/group": {
                 "2774827 - node:group functionality for adding node:group:title": "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch",
                 "2984315 - TODO: no longer in use, but track as alternative to groupmedia. Create an enabler that will allow Media to be added as group content, and access-controlled by group permissions.": "https://www.drupal.org/files/issues/2018-08-24/2984315-5.patch",
-                "2842630 - Empty page when trying to create group node": "https://www.drupal.org/files/issues/2018-09-13/2842630-15.patch",
-                "POWR-833 - Patch Group module to remove term node and make verbiage more user friendly": "patches/powr-833-group.patch"
-            },
-            "drupal/groupmedia": {
-                "POWR-833 - Patch Groupmedia module to make the verbiage consistent with Group/gnode": "patches/powr-833-groupmedia.patch"
+                "2842630 - Empty page when trying to create group node": "https://www.drupal.org/files/issues/2018-09-13/2842630-15.patch"
             },
             "drupal/clamav": {
                 "2915237 - allowUncheckedFiles() not working as expected": "https://www.drupal.org/files/issues/2915237-2.patch"
