--- a/web/sites/default/config/media.type.audio.yml
+++ b/web/sites/default/config/media.type.audio.yml
@@ -10,7 +10,7 @@ third_party_settings:
     image_field: null
 id: audio
 label: Audio
-description: 'A YouTube video with only a placeholder image. This allows us to add captioning through YouTube.'
+description: 'An audio file hosted by YouTube.'
 source: video_embed_field
 queue_thumbnail_downloads: false
 new_revision: false
