--- a/web/sites/default/config/media.type.video.yml
+++ b/web/sites/default/config/media.type.video.yml
@@ -12,7 +12,7 @@ _core:
   default_config_hash: CDRaWPhGJXLhi1p3SiKLfu8Qq7S8OB3oG3DroYiiDjk
 id: video
 label: Video
-description: 'A video hosted by YouTube or Vimeo. Video added to the site must include closed captioning for accessibility within 5 days of publishing.'
+description: 'A video hosted by YouTube, Vimeo, or some other provider.'
 source: video_embed_field
 queue_thumbnail_downloads: false
 new_revision: false
