POWR-909 add in default view, field styling, group permissions

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
@@ -64,9 +64,11 @@ content:
     third_party_settings: {  }
 hidden:
   field_body_content: true
+  field_community_actions: true
   field_group: true
   field_legacy_path: true
   field_online_application_link: true
+  field_permit_type: true
   field_phone: true
   field_phone_help: true
   field_service_location: true
