--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -36,16 +36,6 @@ permissions:
   21: 'view unpublished group_node:news entity'
   22: 'create group_node:news content'
   23: 'view group_node:news content'
-  24: 'delete any group_node:guide entity'
-  25: 'delete own group_node:guide entity'
-  26: 'update any group_node:guide entity'
-  27: 'update own group_node:guide entity'
-  28: 'view group_node:guide entity'
-  29: 'view unpublished group_node:guide entity'
-  30: 'create group_node:guide content'
-  31: 'view group_node:guide content'
-  32: 'view group_node:information entity'
-  33: 'view group_node:information content'
   34: 'delete any group_node:event entity'
   35: 'delete own group_node:event entity'
   36: 'update any group_node:event entity'
@@ -104,5 +94,11 @@ permissions:
   89: 'view group_node:page entity'
   90: 'view unpublished group_node:page entity'
   91: 'create group_node:page content'
-  135: 'create group_node:event entity'
-  154: 'create group_node:news entity'
+  92: 'create group_node:event entity'
+  93: 'create group_node:news entity'
+  137: 'delete own group_node:development_permit entity'
+  138: 'update any group_node:development_permit entity'
+  139: 'update own group_node:development_permit entity'
+  140: 'view group_node:development_permit entity'
+  141: 'view unpublished group_node:development_permit entity'
+  142: 'create group_node:development_permit content'
