--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -26,12 +26,6 @@ permissions:
   11: 'update own group_node:news entity'
   12: 'view group_node:news entity'
   13: 'view unpublished group_node:news entity'
-  14: 'delete own group_node:guide entity'
-  15: 'update any group_node:guide entity'
-  16: 'update own group_node:guide entity'
-  17: 'view group_node:guide entity'
-  18: 'view unpublished group_node:guide entity'
-  19: 'view group_node:information entity'
   20: 'delete own group_node:event entity'
   21: 'update any group_node:event entity'
   22: 'update own group_node:event entity'
@@ -74,5 +68,9 @@ permissions:
   59: 'update own group_node:page entity'
   60: 'view group_node:page entity'
   61: 'view unpublished group_node:page entity'
-  90: 'create group_node:event entity'
-  102: 'create group_node:news entity'
+  62: 'create group_node:event entity'
+  63: 'create group_node:news entity'
+  92: 'update any group_node:development_permit entity'
+  93: 'update own group_node:development_permit entity'
+  94: 'view group_node:development_permit entity'
+  95: 'view unpublished group_node:development_permit entity'
