--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -36,15 +36,6 @@ permissions:
   21: 'view unpublished group_node:news entity'
   22: 'create group_node:news content'
   23: 'view group_node:news content'
-  24: 'delete any group_node:guide entity'
-  25: 'delete own group_node:guide entity'
-  26: 'update any group_node:guide entity'
-  27: 'update own group_node:guide entity'
-  28: 'view group_node:guide entity'
-  29: 'view unpublished group_node:guide entity'
-  30: 'create group_node:guide content'
-  31: 'view group_node:guide content'
-  32: 'view group_node:information entity'
   33: 'delete any group_node:event entity'
   34: 'delete own group_node:event entity'
   35: 'update any group_node:event entity'
@@ -107,5 +98,13 @@ permissions:
   92: 'view unpublished group_node:page entity'
   93: 'create group_node:page content'
   94: 'view group_node:page content'
-  138: 'create group_node:event entity'
-  156: 'create group_node:news entity'
+  95: 'create group_node:event entity'
+  96: 'create group_node:news entity'
+  140: 'delete any group_node:development_permit entity'
+  141: 'delete own group_node:development_permit entity'
+  142: 'update any group_node:development_permit entity'
+  143: 'update own group_node:development_permit entity'
+  144: 'view group_node:development_permit entity'
+  145: 'view unpublished group_node:development_permit entity'
+  146: 'create group_node:development_permit content'
+  147: 'view group_node:development_permit content'
