--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,9 +205,11 @@ run_tests: &run_tests
 
           if [[ $CIRCLE_BRANCH = "master" ]]; then
             terminus remote:drush portlandor.dev -- cim -y
+            terminus remote:drush portlandor.dev -- cim -y
             terminus remote:drush portlandor.dev -- cr
             terminus remote:drush portlandor.dev -- -y updb
           else
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
