POWR-975 Add a CI step for drush commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,8 +195,7 @@ run_tests: &run_tests
           # TODO: should only deploy non-dev packages
           # --no-dev
     - run:
-        name: Run tests against Pantheon
-        when: on_success
+        name: Run drush commands on Pantheon
         command: |
           export PATH=/var/www/html/vendor/bin:/tmp/vendor/pantheon-systems/terminus/bin:$PATH
           terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email" && terminus aliases
@@ -205,15 +204,19 @@ run_tests: &run_tests
 
           if [[ $CIRCLE_BRANCH = "master" ]]; then
             terminus remote:drush portlandor.dev -- cim -y
-            terminus remote:drush portlandor.dev -- cim -y
             terminus remote:drush portlandor.dev -- cr
             terminus remote:drush portlandor.dev -- -y updb
           else
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
           fi
+    - run:
+        name: Run tests against Pantheon
+        when: on_success
+        command: |
+          export PATH=/var/www/html/vendor/bin:/tmp/vendor/pantheon-systems/terminus/bin:$PATH
+          terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email" && terminus aliases
 
           # TODO: revisit this when we only deploy non-dev packages.
           # Install Behat and its dependencies.
