POWR-904 added Date Timepicker module and created content type for testing

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -150,6 +150,7 @@ module:
   text: 0
   textarea_widget_for_text: 0
   time_field: 0
+  timepicker: 0
   token: 0
   toolbar: 0
   transliterate_filenames: 0
