--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -27,6 +27,7 @@ dependencies:
     - paragraphs
     - text
     - time_field
+    - timepicker
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -56,7 +57,12 @@ content:
   field_end_date:
     weight: 9
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      timepicker:
+        enabled: '1'
+        type: timepicker_jonthornton
+        js_options:
+          value: ''
     type: datetime_default
     region: content
   field_end_time:
@@ -146,7 +152,12 @@ content:
   field_start_date:
     weight: 7
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      timepicker:
+        enabled: '1'
+        type: timepicker_jonthornton
+        js_options:
+          value: ''
     type: datetime_default
     region: content
   field_start_time:
