--- a/web/sites/default/config/field.storage.node.field_date_timepicker_demo_3.yml
+++ b/web/sites/default/config/field.storage.node.field_date_timepicker_demo_3.yml
@@ -1,20 +1,21 @@
-uuid: 2b5e2698-612d-4a8f-90c7-9a3b42ad06bb
+uuid: 2a08af2f-82e1-4e61-a473-fb7ac1828fac
 langcode: en
 status: true
 dependencies:
   module:
+    - datetime
     - field_permissions
     - node
-    - time_field
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_start_time
-field_name: field_start_time
+id: node.field_date_timepicker_demo_3
+field_name: field_date_timepicker_demo_3
 entity_type: node
-type: time
-settings: {  }
-module: time_field
+type: datetime
+settings:
+  datetime_type: date
+module: datetime
 locked: false
 cardinality: 1
 translatable: true
