--- a/web/sites/default/config/field.storage.node.field_time_field_test.yml
+++ b/web/sites/default/config/field.storage.node.field_time_field_test.yml
@@ -1,4 +1,4 @@
-uuid: 2b5e2698-612d-4a8f-90c7-9a3b42ad06bb
+uuid: 7e910206-312c-4e67-9fef-156c58f8a6cc
 langcode: en
 status: true
 dependencies:
@@ -9,8 +9,8 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_start_time
-field_name: field_start_time
+id: node.field_time_field_test
+field_name: field_time_field_test
 entity_type: node
 type: time
 settings: {  }
