POWR-904 added library dependencies for timepicker to composer

--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,9 @@
         "drupal/viewsreference": "^1.2",
         "drupal/webform": "^5.1",
         "drush/drush": "^9.5.0",
+        "jonthornton/jquery-timepicker": "^1.11",
         "roave/security-advisories": "dev-master",
+        "trentrichardson/jquery-timepicker-addon": "^1.6",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4"
