POWR-909 field configuration and add templates for search and teaser

--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -12,8 +12,12 @@ dependencies:
     - field.field.node.development_permit.field_permit_type
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
+    - field.field.node.development_permit.field_popular
+    - field.field.node.development_permit.field_related_content
+    - field.field.node.development_permit.field_reviewer
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
+    - field.field.node.development_permit.field_topics
     - node.type.development_permit
   module:
     - allowed_formats
@@ -32,12 +36,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 15
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   field_body_content:
-    weight: 8
+    weight: 10
     settings:
       rows: 5
       placeholder: ''
@@ -56,16 +60,16 @@ content:
     weight: 3
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: chosen_select
     region: content
   field_group:
-    weight: 10
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 9
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -73,7 +77,7 @@ content:
     type: string_textfield
     region: content
   field_online_application_link:
-    weight: 4
+    weight: 9
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -81,20 +85,20 @@ content:
     type: link_default
     region: content
   field_permit_type:
-    weight: 2
+    weight: 8
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: chosen_select
     region: content
   field_phone:
-    weight: 5
+    weight: 6
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
     region: content
   field_phone_help:
-    weight: 6
+    weight: 7
     settings:
       rows: 2
       placeholder: ''
@@ -109,8 +113,33 @@ content:
         maxlength_js_truncate_html: false
     type: text_textarea
     region: content
+  field_popular:
+    weight: 2
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_related_content:
+    weight: 11
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_reviewer:
+    weight: 18
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_service_location:
-    weight: 7
+    weight: 5
     settings:
       entity_browser: service_locations
       field_widget_display: rendered_entity
@@ -137,15 +166,21 @@ content:
         maxlength_js_truncate_html: true
     type: string_textarea
     region: content
+  field_topics:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 11
+    weight: 19
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -162,7 +197,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 13
     region: content
     settings:
       match_operator: CONTAINS
@@ -170,7 +205,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
