--- a/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
@@ -5,13 +5,19 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.development_permit.field_body_content
+    - field.field.node.development_permit.field_community_actions
     - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
+    - field.field.node.development_permit.field_permit_type
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
+    - field.field.node.development_permit.field_popular
+    - field.field.node.development_permit.field_related_content
+    - field.field.node.development_permit.field_reviewer
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
+    - field.field.node.development_permit.field_topics
     - node.type.development_permit
   module:
     - panelizer
@@ -29,13 +35,14 @@ mode: search_result
 content:
   field_summary:
     type: string
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_body_content: true
   field_community_actions: true
   field_group: true
@@ -44,5 +51,9 @@ hidden:
   field_permit_type: true
   field_phone: true
   field_phone_help: true
+  field_popular: true
+  field_related_content: true
+  field_reviewer: true
   field_service_location: true
+  field_topics: true
   links: true
