--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,18 +3,18 @@ langcode: en
 status: true
 dependencies:
   module:
-    - group
-    - search_api_solr
     - node
     - taxonomy
+    - group
+    - search_api_solr
     - search_api
     - portland
   config:
+    - field.storage.node.field_body
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
-    - field.storage.node.field_body
     - field.storage.node.field_summary
     - search_api.server.searchstax
 id: full_index
@@ -276,12 +276,10 @@ processor_settings:
     alt: true
     tags:
       b: 2
-      em: 1
       h1: 5
       h2: 3
       h3: 2
       strong: 2
-      u: 1
     weights:
       preprocess_index: -15
       preprocess_query: -15
@@ -300,6 +298,7 @@ processor_settings:
         datasource_boost: !!float 1
         bundle_boosts:
           city_service: !!float 8
+          development_permit: !!float 8
           event: !!float 1
           guide: !!float 8
           information: !!float 0
