--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -27,11 +27,12 @@ view_mode_configuration:
   'entity:group_program': search_result
   'entity:group_project': search_result
   'entity:node_city_service': search_result
+  'entity:node_development_permit': search_result
   'entity:node_event': search_result
-  'entity:node_guide': search_result
-  'entity:node_information': search_result
   'entity:node_news': search_result
   'entity:node_page': search_result
+  'entity:node_guide': search_result
+  'entity:node_information': search_result
   'entity:taxonomy_term_audience': search_result
   'entity:taxonomy_term_community_actions': search_result
   'entity:taxonomy_term_topics': search_result
