--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -14,7 +14,7 @@ dependencies:
 id: group_services
 label: 'Group: Services and Pages'
 module: views
-description: 'Shows services, service locations, and pages of all types (guide, information, etc.) for use with groups that have services.'
+description: 'Shows services, development permits, and pages of all types (guide, information, etc.) for use with groups that have services.'
 tag: Group
 base_table: node_field_data
 base_field: nid
@@ -315,6 +315,7 @@ display:
           required: true
           group_content_plugins:
             'group_node:city_service': 'group_node:city_service'
+            'group_node:development_permit': 'group_node:development_permit'
             'group_node:page': 'group_node:page'
             'group_node:alert': '0'
             'group_node:building': '0'
