--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -6,9 +6,8 @@ dependencies:
     - node.type.alert
     - node.type.building
     - node.type.city_service
+    - node.type.development_permit
     - node.type.event
-    - node.type.guide
-    - node.type.information
     - node.type.news
     - node.type.notification
     - node.type.page
@@ -88,9 +87,8 @@ type_settings:
       - alert
       - building
       - city_service
+      - development_permit
       - event
-      - guide
-      - information
       - news
       - notification
       - page
