--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -11,8 +11,12 @@ dependencies:
     - field.field.node.development_permit.field_permit_type
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
+    - field.field.node.development_permit.field_popular
+    - field.field.node.development_permit.field_related_content
+    - field.field.node.development_permit.field_reviewer
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
+    - field.field.node.development_permit.field_topics
     - node.type.development_permit
   module:
     - ds
@@ -74,6 +78,32 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
+  field_popular:
+    weight: 10
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_related_content:
+    weight: 9
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_reviewer:
+    weight: 8
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_service_location:
     weight: 3
     label: hidden
@@ -97,6 +127,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_topics:
+    weight: 7
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   field_community_actions: true
