--- a/web/sites/default/config/field.field.node.development_permit.field_related_content.yml
+++ b/web/sites/default/config/field.field.node.development_permit.field_related_content.yml
@@ -1,4 +1,4 @@
-uuid: ae5a0ef3-eba2-4139-ac42-9584dc49225d
+uuid: 59333d83-f6ae-4c74-9870-05bcb49fa0bd
 langcode: en
 status: true
 dependencies:
@@ -16,10 +16,10 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.city_service.field_related_content
+id: node.development_permit.field_related_content
 field_name: field_related_content
 entity_type: node
-bundle: city_service
+bundle: development_permit
 label: 'Related content'
 description: 'Start typing the title of content that is related and the field will autocomplete based on a partial match. This content will appear in a "Related" section. This is a one-way relationship for this content only. If you want the relationship to be reciprocal, add it to the other content as well.'
 required: false
