POWR-909 fix both the permit and page teasers and search POWR-947

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.teaser.yml
@@ -5,15 +5,22 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.development_permit.field_body_content
+    - field.field.node.development_permit.field_community_actions
     - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
+    - field.field.node.development_permit.field_permit_type
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
+    - field.field.node.development_permit.field_popular
+    - field.field.node.development_permit.field_related_content
+    - field.field.node.development_permit.field_reviewer
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
+    - field.field.node.development_permit.field_topics
     - node.type.development_permit
   module:
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -27,22 +34,50 @@ targetEntityType: node
 bundle: development_permit
 mode: teaser
 content:
+  field_permit_type:
+    type: entity_reference_label
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_popular:
+    type: boolean
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
   field_summary:
     type: string
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_body_content: true
   field_community_actions: true
   field_group: true
   field_legacy_path: true
   field_online_application_link: true
-  field_permit_type: true
   field_phone: true
   field_phone_help: true
+  field_related_content: true
+  field_reviewer: true
   field_service_location: true
+  field_topics: true
   links: true
