--- a/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
@@ -20,6 +20,7 @@ dependencies:
     - field.field.node.development_permit.field_topics
     - node.type.development_permit
   module:
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -33,6 +34,21 @@ targetEntityType: node
 bundle: development_permit
 mode: search_result
 content:
+  field_permit_type:
+    type: entity_reference_label
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     type: string
     weight: 0
@@ -48,7 +64,6 @@ hidden:
   field_group: true
   field_legacy_path: true
   field_online_application_link: true
-  field_permit_type: true
   field_phone: true
   field_phone_help: true
   field_popular: true
