POWR-909 template updates, view creation and updates

--- a/web/sites/default/config/field.field.node.development_permit.field_phone_help.yml
+++ b/web/sites/default/config/field.field.node.development_permit.field_phone_help.yml
@@ -28,7 +28,7 @@ required: false
 translatable: false
 default_value:
   -
-    value: "<p>Call us 8:00 AM to 5:00 PM Monday through Friday with questions or to check the status of your permit—except for holidays.</p>\r\n"
+    value: "<p>Staff is available from 8:00 AM to 5:00 PM Monday through Friday (except holidays).&nbsp;Ask a&nbsp;question&nbsp;or to check the status of your permit.</p>\r\n"
     format: simple_editor
 default_value_callback: ''
 settings: {  }
