--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -49,3 +49,14 @@ cloudy_homepage:
       label: Terms
       classes:
         - terms
+
+# Main with sidebar is used for content that needs a sidebar layout
+cloudy_main_with_sidebar:
+  label: Cloudy main with sidebar
+  category: Cloudy
+  template: templates/layout/cloudy-main-with-sidebar
+  regions:
+    primary:
+      label: Primary
+    secondary:
+      label: Secondary
