--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -31,20 +31,37 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_main_with_sidebar
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      primary:
+        - field_permit_type
+        - field_summary
+        - field_online_application_link
+        - field_body_content
+      secondary:
+        - field_phone
+        - field_phone_help
+        - field_service_location
 id: node.development_permit.default
 targetEntityType: node
 bundle: development_permit
 mode: default
 content:
   field_body_content:
-    weight: 5
+    weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
-    region: content
+    region: primary
   field_online_application_link:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       trim_length: 80
@@ -54,58 +71,67 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
-    region: content
+    region: primary
   field_permit_type:
-    weight: 6
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_phone:
-    weight: 2
+    weight: 0
     label: hidden
     settings:
-      title: ''
-    third_party_settings: {  }
-    type: telephone_link
-    region: content
-  field_phone_help:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: 'permit-type mb-3'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+    type: entity_reference_label
+    region: primary
+  field_phone:
     weight: 4
+    label: above
+    settings:
+      title: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: 'Call us'
+            lb-col: false
+            classes: {  }
+    type: telephone_link
+    region: secondary
+  field_phone_help:
+    weight: 5
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
-    region: content
-  field_popular:
-    weight: 10
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_related_content:
-    weight: 9
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_reviewer:
-    weight: 8
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
+    region: secondary
   field_service_location:
-    weight: 3
+    weight: 6
     label: hidden
     settings:
       view_mode: teaser
@@ -119,25 +145,50 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
-    region: content
+    region: secondary
   field_summary:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: string
-    region: content
-  field_topics:
-    weight: 7
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
+    region: primary
 hidden:
+  content_moderation_control: true
   field_community_actions: true
   field_group: true
   field_legacy_path: true
+  field_popular: true
+  field_related_content: true
+  field_reviewer: true
+  field_topics: true
   links: true
