POWR-909 remove link from permit type label

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -76,35 +76,35 @@ content:
     weight: 0
     label: hidden
     settings:
-      link: true
+      link: false
     third_party_settings:
       ds:
         ft:
           id: expert
           settings:
             lb: ''
-            prefix: ''
+            prefix: '<span class="sr-only">Type is</span>'
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
+            ow: true
+            ow-el: div
+            ow-cl: 'badge badge-light mb-3 align-self-start'
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: 'permit-type mb-3'
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
             lb-col: false
-            ow: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: entity_reference_label
     region: primary
