POWR-904 config updates to use new datepicker filter

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -668,12 +668,12 @@ display:
             min: today
             max: '+30 days'
             value: today
-            type: offset
+            type: date
           group: 2
           exposed: true
           expose:
             operator_id: field_start_date_value_op
-            label: 'Start date between'
+            label: 'Date range between'
             description: ''
             use_operator: false
             operator: field_start_date_value_op
