--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -19,10 +19,10 @@ dependencies:
     - field.field.node.event.field_summary
     - node.type.event
   module:
+    - bootstrap_datepicker
     - chosen_field
     - conditional_fields
     - content_moderation
-    - datetime
     - entity_browser
     - paragraphs
     - text
@@ -55,9 +55,61 @@ content:
     third_party_settings: {  }
   field_end_date:
     weight: 9
-    settings: {  }
+    settings:
+      title: ''
+      format: mm/dd/yyyy
+      language: en
+      show_week_days: '1'
+      today_btn: 'FALSE'
+      clear_btn: '1'
+      autoclose: '1'
+      week_start: '0'
+      assume_nearby_year: '1'
+      container: body
+      dates_disabled: ''
+      days_of_week_highlighted:
+        2: '2'
+        3: '3'
+        4: '4'
+        5: '5'
+        6: '6'
+        1: 0
+        7: 0
+      end_date_selection: date
+      end_date: ''
+      end_date_timedelta: ''
+      force_parse: '1'
+      keyboard_navigation: '1'
+      max_view_mode: '4'
+      min_view_mode: '0'
+      orientation: 'bottom auto'
+      show_on_focus: '1'
+      start_date_selection: date
+      start_date: ''
+      start_date_timedelta: ''
+      start_view: '0'
+      update_view_date: '1'
+      z_index_offset: '10'
+      calendar_weeks: 0
+      toggle_active: false
+      days_of_week_disabled:
+        1: 0
+        2: 0
+        3: 0
+        4: 0
+        5: 0
+        6: 0
+        7: 0
+      disable_touch_keyboard: 0
+      enable_on_readonly: 0
+      immediate_updates: 0
+      keep_empty_values: 0
+      multidate: false
+      multidate_separator: ','
+      rtl: 0
+      today_highlight: 0
     third_party_settings: {  }
-    type: datetime_default
+    type: bootstrap_date_widget
     region: content
   field_end_time:
     weight: 10
@@ -145,9 +197,61 @@ content:
     region: content
   field_start_date:
     weight: 7
-    settings: {  }
+    settings:
+      title: ''
+      format: mm/dd/yyyy
+      language: en
+      show_week_days: '1'
+      today_btn: 'FALSE'
+      clear_btn: '1'
+      autoclose: '1'
+      week_start: '0'
+      assume_nearby_year: '1'
+      container: body
+      dates_disabled: ''
+      days_of_week_highlighted:
+        2: '2'
+        3: '3'
+        4: '4'
+        5: '5'
+        6: '6'
+        1: 0
+        7: 0
+      end_date_selection: date
+      end_date: ''
+      end_date_timedelta: ''
+      force_parse: '1'
+      keyboard_navigation: '1'
+      max_view_mode: '4'
+      min_view_mode: '0'
+      orientation: 'bottom auto'
+      show_on_focus: '1'
+      start_date_selection: date
+      start_date: ''
+      start_date_timedelta: ''
+      start_view: '0'
+      today_highlight: '1'
+      update_view_date: '1'
+      z_index_offset: '10'
+      calendar_weeks: 0
+      toggle_active: false
+      days_of_week_disabled:
+        1: 0
+        2: 0
+        3: 0
+        4: 0
+        5: 0
+        6: 0
+        7: 0
+      disable_touch_keyboard: 0
+      enable_on_readonly: 0
+      immediate_updates: 0
+      keep_empty_values: 0
+      multidate: false
+      multidate_separator: ','
+      rtl: 0
     third_party_settings: {  }
-    type: datetime_default
+    type: bootstrap_date_widget
     region: content
   field_start_time:
     weight: 8
