--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -9,6 +9,8 @@ module:
   automated_cron: 0
   block: 0
   block_content: 0
+  bootstrap_datepicker: 0
+  bootstrap_datepicker_exposed_filter: 0
   breakpoint: 0
   chosen: 0
   chosen_field: 0
