--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -186,3 +186,5 @@ kint: 1.2.0
 content_lock_timeout: 1.0.0-alpha8
 focal_point: 1.0.0-beta6
 draggableviews: 1.2.0
+bootstrap_datepicker: 0.0.0
+bootstrap_datepicker_exposed_filter: 1.x
